--- a/travis_cpp_tutorial.lyx
+++ b/travis_cpp_tutorial.lyx
@@ -2509,7 +2509,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98/main.cpp"
+filename "travis_qmake_gcc_cpp11/main.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -2899,7 +2899,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_debug_and_release/build_debug.sh"
+filename "travis_qmake_gcc_cpp98_debug_and_release/build_debug.sh"
 lstparams "breaklines=true,language={bash}"
 
 \end_inset
@@ -2934,7 +2934,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_debug_and_release/build_release.sh"
+filename "travis_qmake_gcc_cpp98_debug_and_release/build_release.sh"
 lstparams "breaklines=true,language={bash}"
 
 \end_inset
@@ -2983,7 +2983,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp98_debug_and_release/travis_qmake_gcc_cpp98_debug_and_release.pro"
+filename "travis_qmake_gcc_cpp98_debug_and_release/travis_qmake_gcc_cpp98_debug_and_release.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -3119,7 +3119,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_debug_and_release/main.cpp"
+filename "travis_qmake_gcc_cpp98_debug_and_release/main.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -3582,7 +3582,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11/main.cpp"
+filename "travis_qmake_gcc_cpp11/main.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -3822,7 +3822,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp14/main.cpp"
+filename "travis_qmake_gcc_cpp14/main.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -4025,7 +4025,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_boost/build.sh"
+filename "travis_qmake_gcc_cpp98_boost/build.sh"
 lstparams "breaklines=true,language={bash}"
 
 \end_inset
@@ -4080,7 +4080,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp98_boost/travis_qmake_gcc_cpp98_boost.pro"
+filename "travis_qmake_gcc_cpp98_boost/travis_qmake_gcc_cpp98_boost.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -4142,7 +4142,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_boost/main.cpp"
+filename "travis_qmake_gcc_cpp98_boost/main.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -4343,7 +4343,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_clang_cpp98/build.sh"
+filename "travis_qmake_clang_cpp98/build.sh"
 lstparams "breaklines=true,language={bash}"
 
 \end_inset
@@ -4399,7 +4399,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_clang_cpp98/travis_qmake_clang_cpp98.pro"
+filename "travis_qmake_clang_cpp98/travis_qmake_clang_cpp98.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -4499,7 +4499,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_clang_cpp98/main.cpp"
+filename "travis_qmake_clang_cpp98/main.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -4648,7 +4648,7 @@ status open
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
-	filename ../travis_qmake_gcc_cpp98_gcov/travis_qmake_gcc_cpp98_gcov_codecov.png
+	filename travis_qmake_gcc_cpp98_gcov/travis_qmake_gcc_cpp98_gcov_codecov.png
 	lyxscale 50
 	width 100text%
 
@@ -4699,7 +4699,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp98_gcov/.travis.yml"
+filename "travis_qmake_gcc_cpp98_gcov/.travis.yml"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -4811,7 +4811,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_gcov/get_code_cov"
+filename "travis_qmake_gcc_cpp98_gcov/get_code_cov"
 lstparams "breaklines=true,language={bash}"
 
 \end_inset
@@ -4902,7 +4902,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp98_gcov/travis_qmake_gcc_cpp98_gcov.pro"
+filename "travis_qmake_gcc_cpp98_gcov/travis_qmake_gcc_cpp98_gcov.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -4986,7 +4986,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_gcov/main.cpp"
+filename "travis_qmake_gcc_cpp98_gcov/main.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -5085,7 +5085,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp98_oclint/.travis.yml"
+filename "travis_qmake_gcc_cpp98_oclint/.travis.yml"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -5238,7 +5238,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_oclint/build.sh"
+filename "travis_qmake_gcc_cpp98_oclint/build.sh"
 lstparams "breaklines=true,language={bash}"
 
 \end_inset
@@ -5288,7 +5288,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_oclint/do_oclint.sh"
+filename "travis_qmake_gcc_cpp98_oclint/do_oclint.sh"
 lstparams "breaklines=true,language={bash}"
 
 \end_inset
@@ -5463,7 +5463,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp98_oclint/travis_qmake_gcc_cpp98_oclint.pro"
+filename "travis_qmake_gcc_cpp98_oclint/travis_qmake_gcc_cpp98_oclint.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -5525,7 +5525,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_oclint/main.cpp"
+filename "travis_qmake_gcc_cpp98_oclint/main.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -5934,7 +5934,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_qt4/main.cpp"
+filename "travis_qmake_gcc_cpp98_qt4/main.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -6075,7 +6075,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_qt4/my_dialog.h"
+filename "travis_qmake_gcc_cpp98_qt4/my_dialog.h"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -6332,7 +6332,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_qt4/my_dialog.cpp"
+filename "travis_qmake_gcc_cpp98_qt4/my_dialog.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -6585,7 +6585,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp98_qt5/.travis.yml"
+filename "travis_qmake_gcc_cpp98_qt5/.travis.yml"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -6697,7 +6697,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp98_qt5/travis_qmake_gcc_cpp98_qt5.pro"
+filename "travis_qmake_gcc_cpp98_qt5/travis_qmake_gcc_cpp98_qt5.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -6780,7 +6780,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_qt5/main.cpp"
+filename "travis_qmake_gcc_cpp98_qt5/main.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -6831,7 +6831,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_qt5/my_qt5_dialog.h"
+filename "travis_qmake_gcc_cpp98_qt5/my_qt5_dialog.h"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -6882,7 +6882,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_qt5/my_qt5_dialog.cpp"
+filename "travis_qmake_gcc_cpp98_qt5/my_qt5_dialog.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -7710,7 +7710,7 @@ status open
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
-	filename ../travis_qmake_gcc_cpp98_sfml/travis_qmake_gcc_cpp98_sfml.png
+	filename travis_qmake_gcc_cpp98_sfml/travis_qmake_gcc_cpp98_sfml.png
 	width 50text%
 
 \end_inset
@@ -7815,7 +7815,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp98_sfml/.travis.yml"
+filename "travis_qmake_gcc_cpp98_sfml/.travis.yml"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -7892,7 +7892,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_sfml/build.sh"
+filename "travis_qmake_gcc_cpp98_sfml/build.sh"
 lstparams "breaklines=true,language={bash}"
 
 \end_inset
@@ -7947,7 +7947,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp98_sfml/travis_qmake_gcc_cpp98_sfml.pro"
+filename "travis_qmake_gcc_cpp98_sfml/travis_qmake_gcc_cpp98_sfml.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -8024,7 +8024,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_sfml/main.cpp"
+filename "travis_qmake_gcc_cpp98_sfml/main.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -8385,7 +8385,7 @@ status open
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
-	filename /home/richel/GitHubs/travis_qmake_gcc_cpp11_urho3d/pics/travis_qmake_gcc_cpp11_urho3d.png
+	filename travis_qmake_gcc_cpp11_urho3d/pics/travis_qmake_gcc_cpp11_urho3d.png
 	lyxscale 50
 	width 25text%
 
@@ -8734,7 +8734,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_wt/build.sh"
+filename "travis_qmake_gcc_cpp98_wt/build.sh"
 lstparams "breaklines=true,language={bash}"
 
 \end_inset
@@ -8789,7 +8789,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp98_wt/travis_qmake_gcc_cpp98_wt.pro"
+filename "travis_qmake_gcc_cpp98_wt/travis_qmake_gcc_cpp98_wt.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -8851,7 +8851,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_wt/main.cpp"
+filename "travis_qmake_gcc_cpp98_wt/main.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -9243,7 +9243,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_debug_gcov/build_debug"
+filename "travis_qmake_gcc_cpp98_debug_gcov/build_debug"
 lstparams "breaklines=true,language={bash}"
 
 \end_inset
@@ -9286,7 +9286,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_debug_gcov/build_release"
+filename "travis_qmake_gcc_cpp98_debug_gcov/build_release"
 lstparams "breaklines=true,language={bash}"
 
 \end_inset
@@ -9333,7 +9333,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp98_debug_gcov/travis_qmake_gcc_cpp98_debug_gcov.pro"
+filename "travis_qmake_gcc_cpp98_debug_gcov/travis_qmake_gcc_cpp98_debug_gcov.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -9379,7 +9379,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp98_debug_gcov/travis_qmake_gcc_cpp98_debug_gcov_gcov.pro"
+filename "travis_qmake_gcc_cpp98_debug_gcov/travis_qmake_gcc_cpp98_debug_gcov_gcov.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -9467,7 +9467,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_debug_gcov/do_magic.h"
+filename "travis_qmake_gcc_cpp98_debug_gcov/do_magic.h"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -9506,7 +9506,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_debug_gcov/do_magic.cpp"
+filename "travis_qmake_gcc_cpp98_debug_gcov/do_magic.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -9549,7 +9549,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_debug_gcov/main.cpp"
+filename "travis_qmake_gcc_cpp98_debug_gcov/main.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -9592,7 +9592,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_debug_gcov/main_gcov.cpp"
+filename "travis_qmake_gcc_cpp98_debug_gcov/main_gcov.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -9658,7 +9658,7 @@ status open
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
-	filename ../travis_qmake_gcc_cpp98_qt_qtest/travis_qmake_gcc_cpp98_qt_qtest.png
+	filename travis_qmake_gcc_cpp98_qt_qtest/travis_qmake_gcc_cpp98_qt_qtest.png
 
 \end_inset
 
@@ -9750,7 +9750,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp98_qt_qtest/.travis.yml"
+filename "travis_qmake_gcc_cpp98_qt_qtest/.travis.yml"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -9825,7 +9825,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_qt_qtest/build_test.sh"
+filename "travis_qmake_gcc_cpp98_qt_qtest/build_test.sh"
 lstparams "breaklines=true,language={bash}"
 
 \end_inset
@@ -9860,7 +9860,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_qt_qtest/build_normal.sh"
+filename "travis_qmake_gcc_cpp98_qt_qtest/build_normal.sh"
 lstparams "breaklines=true,language={bash}"
 
 \end_inset
@@ -9910,7 +9910,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp98_qt_qtest/travis_qmake_gcc_cpp98_qt_qtest_test.pro"
+filename "travis_qmake_gcc_cpp98_qt_qtest/travis_qmake_gcc_cpp98_qt_qtest_test.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -9956,7 +9956,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp98_qt_qtest/travis_qmake_gcc_cpp98_qt_qtest.pro"
+filename "travis_qmake_gcc_cpp98_qt_qtest/travis_qmake_gcc_cpp98_qt_qtest.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -10010,7 +10010,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_qt_qtest/my_dialog.h"
+filename "travis_qmake_gcc_cpp98_qt_qtest/my_dialog.h"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -10056,7 +10056,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_qt_qtest/my_dialog.cpp"
+filename "travis_qmake_gcc_cpp98_qt_qtest/my_dialog.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -10110,7 +10110,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_qt_qtest/qtmain.cpp"
+filename "travis_qmake_gcc_cpp98_qt_qtest/qtmain.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -10166,7 +10166,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_qt_qtest/qtmain_test.cpp"
+filename "travis_qmake_gcc_cpp98_qt_qtest/qtmain_test.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -10217,7 +10217,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_qt_qtest/my_dialog_test.h"
+filename "travis_qmake_gcc_cpp98_qt_qtest/my_dialog_test.h"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -10280,7 +10280,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp98_qt_qtest/my_dialog_test.cpp"
+filename "travis_qmake_gcc_cpp98_qt_qtest/my_dialog_test.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -10384,7 +10384,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_boost/main.cpp"
+filename "travis_qmake_gcc_cpp11_boost/main.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -10429,7 +10429,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp11_boost/travis_qmake_gcc_cpp11_boost.pro"
+filename "travis_qmake_gcc_cpp11_boost/travis_qmake_gcc_cpp11_boost.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -10487,7 +10487,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_boost/build.sh"
+filename "travis_qmake_gcc_cpp11_boost/build.sh"
 lstparams "breaklines=true,language={bash}"
 
 \end_inset
@@ -10537,7 +10537,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp11_boost/.travis.yml"
+filename "travis_qmake_gcc_cpp11_boost/.travis.yml"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -10828,7 +10828,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_boost_test/my_functions.h"
+filename "travis_qmake_gcc_cpp11_boost_test/my_functions.h"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -10873,7 +10873,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_boost_test/my_functions.cpp"
+filename "travis_qmake_gcc_cpp11_boost_test/my_functions.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -10923,7 +10923,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_boost_test/travis_qmake_gcc_cpp11_boost_test_test.pro"
+filename "travis_qmake_gcc_cpp11_boost_test/travis_qmake_gcc_cpp11_boost_test_test.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -10966,7 +10966,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_boost_test/main_test.cpp"
+filename "travis_qmake_gcc_cpp11_boost_test/main_test.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -11012,7 +11012,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_boost_test/my_functions_test.cpp"
+filename "travis_qmake_gcc_cpp11_boost_test/my_functions_test.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -11059,7 +11059,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_boost_test/main.cpp"
+filename "travis_qmake_gcc_cpp11_boost_test/main.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -11104,7 +11104,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp11_boost_test/travis_qmake_gcc_cpp11_boost_test.pro"
+filename "travis_qmake_gcc_cpp11_boost_test/travis_qmake_gcc_cpp11_boost_test.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -11159,7 +11159,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_boost_test/build.sh"
+filename "travis_qmake_gcc_cpp11_boost_test/build.sh"
 lstparams "breaklines=true,language={bash}"
 
 \end_inset
@@ -11207,7 +11207,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp11_boost_test/.travis.yml"
+filename "travis_qmake_gcc_cpp11_boost_test/.travis.yml"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -11311,7 +11311,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_clang_cpp11/main.cpp"
+filename "travis_qmake_clang_cpp11/main.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -11356,7 +11356,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_clang_cpp11/travis_qmake_clang_cpp11.pro"
+filename "travis_qmake_clang_cpp11/travis_qmake_clang_cpp11.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -11414,7 +11414,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_clang_cpp11/build.sh"
+filename "travis_qmake_clang_cpp11/build.sh"
 lstparams "breaklines=true,language={bash}"
 
 \end_inset
@@ -11464,7 +11464,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_clang_cpp11/.travis.yml"
+filename "travis_qmake_clang_cpp11/.travis.yml"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -11548,7 +11548,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp11_gcov/.travis.yml"
+filename "travis_qmake_gcc_cpp11_gcov/.travis.yml"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -11620,7 +11620,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_gcov/build.sh"
+filename "travis_qmake_gcc_cpp11_gcov/build.sh"
 lstparams "breaklines=true,language={bash}"
 
 \end_inset
@@ -11659,7 +11659,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_gcov/get_code_cov.sh"
+filename "travis_qmake_gcc_cpp11_gcov/get_code_cov.sh"
 lstparams "breaklines=true,language={bash}"
 
 \end_inset
@@ -11758,7 +11758,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp11_gcov/travis_qmake_gcc_cpp11_gcov.pro"
+filename "travis_qmake_gcc_cpp11_gcov/travis_qmake_gcc_cpp11_gcov.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -11812,7 +11812,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_gcov/main.cpp"
+filename "travis_qmake_gcc_cpp11_gcov/main.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -11909,7 +11909,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_qt/main.cpp"
+filename "travis_qmake_gcc_cpp11_qt/main.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -11953,7 +11953,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp11_qt/travis_qmake_gcc_cpp11_qt.pro"
+filename "travis_qmake_gcc_cpp11_qt/travis_qmake_gcc_cpp11_qt.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -12011,7 +12011,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_qt/build.sh"
+filename "travis_qmake_gcc_cpp11_qt/build.sh"
 lstparams "breaklines=true,language={bash}"
 
 \end_inset
@@ -12061,7 +12061,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp11_qt/.travis.yml"
+filename "travis_qmake_gcc_cpp11_qt/.travis.yml"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -13149,7 +13149,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_sfml/main.cpp"
+filename "travis_qmake_gcc_cpp11_sfml/main.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -13193,7 +13193,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp11_sfml/travis_qmake_gcc_cpp11_sfml.pro"
+filename "travis_qmake_gcc_cpp11_sfml/travis_qmake_gcc_cpp11_sfml.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -13251,7 +13251,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp11_sfml/.travis.yml"
+filename "travis_qmake_gcc_cpp11_sfml/.travis.yml"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -13543,7 +13543,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_wt/main.cpp"
+filename "travis_qmake_gcc_cpp11_wt/main.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -13587,7 +13587,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp11_wt/travis_qmake_gcc_cpp11_wt.pro"
+filename "travis_qmake_gcc_cpp11_wt/travis_qmake_gcc_cpp11_wt.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -13645,7 +13645,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp11_wt/.travis.yml"
+filename "travis_qmake_gcc_cpp11_wt/.travis.yml"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -13739,7 +13739,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp14_boost/main.cpp"
+filename "travis_qmake_gcc_cpp14_boost/main.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -13784,7 +13784,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp14_boost/travis_qmake_gcc_cpp14_boost.pro"
+filename "travis_qmake_gcc_cpp14_boost/travis_qmake_gcc_cpp14_boost.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -13842,7 +13842,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp14_boost/.travis.yml"
+filename "travis_qmake_gcc_cpp14_boost/.travis.yml"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -14117,7 +14117,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp14_boost_test/my_functions.h"
+filename "travis_qmake_gcc_cpp14_boost_test/my_functions.h"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -14162,7 +14162,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp14_boost_test/my_functions.cpp"
+filename "travis_qmake_gcc_cpp14_boost_test/my_functions.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -14212,7 +14212,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp14_boost_test/travis_qmake_gcc_cpp14_boost_test_test.pro"
+filename "travis_qmake_gcc_cpp14_boost_test/travis_qmake_gcc_cpp14_boost_test_test.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -14255,7 +14255,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp14_boost_test/main_test.cpp"
+filename "travis_qmake_gcc_cpp14_boost_test/main_test.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -14301,7 +14301,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp14_boost_test/my_functions_test.cpp"
+filename "travis_qmake_gcc_cpp14_boost_test/my_functions_test.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -14348,7 +14348,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp14_boost_test/main.cpp"
+filename "travis_qmake_gcc_cpp14_boost_test/main.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -14393,7 +14393,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp14_boost_test/travis_qmake_gcc_cpp14_boost_test.pro"
+filename "travis_qmake_gcc_cpp14_boost_test/travis_qmake_gcc_cpp14_boost_test.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -14448,7 +14448,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp14_boost_test/.travis.yml"
+filename "travis_qmake_gcc_cpp14_boost_test/.travis.yml"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -14710,7 +14710,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp11_debug_gcov/.travis.yml"
+filename "travis_qmake_gcc_cpp11_debug_gcov/.travis.yml"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -14803,7 +14803,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp11_debug_gcov/travis_qmake_gcc_cpp11_debug_gcov.pro"
+filename "travis_qmake_gcc_cpp11_debug_gcov/travis_qmake_gcc_cpp11_debug_gcov.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -14849,7 +14849,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp11_debug_gcov/travis_qmake_gcc_cpp11_debug_gcov_gcov.pro"
+filename "travis_qmake_gcc_cpp11_debug_gcov/travis_qmake_gcc_cpp11_debug_gcov_gcov.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -14937,7 +14937,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_debug_gcov/do_magic.h"
+filename "travis_qmake_gcc_cpp11_debug_gcov/do_magic.h"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -14976,7 +14976,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_debug_gcov/do_magic.cpp"
+filename "travis_qmake_gcc_cpp11_debug_gcov/do_magic.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -15019,7 +15019,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_debug_gcov/main.cpp"
+filename "travis_qmake_gcc_cpp11_debug_gcov/main.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -15062,7 +15062,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_debug_gcov/main_gcov.cpp"
+filename "travis_qmake_gcc_cpp11_debug_gcov/main_gcov.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -15321,7 +15321,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_boost_test_gcov/travis_qmake_gcc_cpp11_boost_test_gcov_test.pro"
+filename "travis_qmake_gcc_cpp11_boost_test_gcov/travis_qmake_gcc_cpp11_boost_test_gcov_test.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -15385,7 +15385,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_boost_test_gcov/build_test.sh"
+filename "travis_qmake_gcc_cpp11_boost_test_gcov/build_test.sh"
 lstparams "breaklines=true,language={bash}"
 
 \end_inset
@@ -15433,7 +15433,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp11_boost_test_gcov/.travis.yml"
+filename "travis_qmake_gcc_cpp11_boost_test_gcov/.travis.yml"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
